EXTRA_DIST = ${PERL_MODULES} ${UNUSED_PERL_MODULES}

nobase_libexec_SCRIPTS = ${PERL_MODULES}

PERL_MODULES = cts_diff_util.pm \
               Batch.pm \
               Batch/LCRM.pm \
               Batch/LSF.pm \
               Devel/SmallProf.pm \
               DumpStack.pm \
               Mail/Sendmail.pm \
               MPI.pm \
               Parallel/ForkManager.pm \
               Parse/RecDescent.pm \
               Reporter.pm \
               Shell/Parser.pm \
               Shell/Source.pm \
	       System.pm \
	       System/Workstation.pm \
               TestHarness/Grammar.pm \
               TestHarness/Harness.pm \
               TestHarness/Judge.pm \
               TestHarness/TestProblem.pm \
               TestHarness/TestSuite.pm \
               TestHarness/TestSuiteParser.pm \
               TestHarness/testsuite_grammar \
               Text/Balanced.pm \
               Tie/Persistent.pm \
               Tie/Epsilon.pm \
	       Tools.pm \
	       Tools/Load.pm

UNUSED_PERL_MODULES = \
               Test.pm \
               Test/Builder.pm \
               Test/More.pm \
               Test/Simple.pm \
               Tools/Check.pm \
               Tools/Cmd/System.pm \
               Tools/Cmd.pm \
               Tools/Log.pm \
               Tools/Log/Config.pm \
               Tools/Log/Handlers.pm \
               Tools/Log/Item.pm \
               Tools/Module.pm \
               Parse/RecDescent.html \
               Parse/RecDescent.pod \
	       System/CX.pm \
	       System/Lambda.pm \
               Tools/SQL.pm \
               Tools/Term.pm 
